# amos-deploy

./: .env.example  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  railway.toml  ubiquity-amos-crates-all.txt
00_DEV_CONTEXT/: 001_FRESH_START_PLANNING.md  002_RUST_AMOS_REBUILD_BLUEPRINT.md  003_RUST_FORGENEURALNETWORK_IMPLEMENTATION_FROM_JS.md  004_AGENT_DEVELOPMENT_PROTO.md  005_AMOS_AGENTS_CRATES.md  006_MULTI_MCP_SYS_SETUP_SWARM.md
backend/: .gitignore  Cargo.toml  README.md  test-build.sh
backend/src/: main.rs  main.rs.backup2  main.rs.broken  main.rs.fixed
crates/amos-agents/: Cargo.toml  README.md
crates/amos-agents/src/: agent.rs  cognition_alchemist.rs  consciousness_emergent.rs  learning_oracle.rs  lib.rs  memory_weaver.rs  mesh_harmonizer.rs  pathway_sculptor.rs  performance_guardian.rs  registry.rs  traffic_seer.rs
crates/amos-agents/tests/: agent_tests.rs  all_agents_tests.rs  integration_tests.rs  registry_tests.rs
crates/amos-api/: API_REFERENCE.md  Cargo.toml  README.md
crates/amos-api/examples/: websocket_client.rs
crates/amos-api/src/: auth.rs  error.rs  lib.rs  state.rs  websocket.rs
crates/amos-api/src/models/: agent.rs  metrics.rs  mod.rs  neural.rs  swarm.rs
crates/amos-api/src/routes/: agents.rs  auth.rs  health.rs  hormonal.rs  metrics.rs  mod.rs  neural.rs  swarm.rs
crates/amos-api/tests/: api_tests.rs  integration_test.rs
crates/amos-cli/: Cargo.toml  README.md
crates/amos-core/: Cargo.toml  README.md
crates/amos-core/.claude/sessions/: 2025-07-03T07-47-06.166Z-summary.md
crates/amos-core/src/: event_bus.rs  hormonal.rs  immune.rs  lib.rs  logging.rs  neural.rs  system.rs
crates/amos-core/tests/: event_bus_tests.rs  hormonal_tests.rs  immune_tests.rs  integration_tests.rs  logging_tests.rs  neural_tests.rs
crates/amos-mcp/: Cargo.toml  README.md
crates/amos-mcp/src/: lib.rs  mcp_client.rs  mcp_context.rs  mcp_protocol.rs  mcp_server.rs  mcp_tools.rs
crates/amos-neural/: Cargo.toml  README.md
crates/amos-shadow/: Cargo.toml
crates/amos-shadow/src/: autonomy_gradient.rs  lib.rs  shadow_capabilities.rs  shadow_metrics.rs  shadow_stage.rs  shadow_state_machine.rs  shadow_transformation.rs
crates/amos-swarm/: Cargo.toml  README.md
crates/amos-swarm/src/: coordination.rs  lib.rs  orchestrator.rs  task.rs  topology.rs
crates/amos-wasm/: .gitignore  Cargo.toml  README.md  build.sh
crates/amos-wasm/examples/: node-example.js  react-integration.jsx  worker-example.js
crates/amos-wasm/src/: lib.rs
crates/amos-wasm/tests/: web.rs
demos/: README.md  run-demos.sh
demos/amos-orchestration/: README.md
demos/amos-orchestration/advanced/: Cargo.toml  README.md  emergent-consensus.rs  stress-response.rs
demos/amos-orchestration/basic/: Cargo.toml  README.md  agent-coordination.rs  hello-swarm.rs  neural-viz.html
demos/amos-orchestration/integrations/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPanel.tsx  EventStream.tsx  NeuralNetworkView.tsx  StatusDashboard.tsx
frontend/src/hooks/: useSwarm.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
