[workspace]
members = [
    "crates/amos-core",
    "crates/amos-neural", 
    "crates/amos-agents",
    "crates/amos-swarm",
    "crates/amos-mcp",
    "crates/amos-api",
    "crates/amos-cli",
    "crates/amos-wasm",
    "crates/amos-shadow",
    "demos/amos-orchestration/basic",
    "backend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AMOS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/breydentaylor/swarmish"
homepage = "https://github.com/breydentaylor/swarmish"
documentation = "https://docs.rs/amos"
description = "Adaptive Mesh Operating System - Biological intelligence framework"
readme = "README.md"
keywords = ["neural-network", "swarm", "ai", "biological", "mcp"]
categories = ["algorithms", "science", "wasm", "web-programming"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime - aligned with ruv-swarm
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.10"

# Error handling - aligned with ruv-swarm
thiserror = "1.0"
anyhow = "1.0"

# Serialization - aligned with ruv-swarm
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging - aligned with ruv-swarm
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Collections and utilities
dashmap = "6.0"  # Updated from 5.0 to match ruv-swarm
futures = "0.3"
parking_lot = "0.12"
crossbeam = "0.8"

# Random and UUID
uuid = { version = "1.11", features = ["v4", "serde"] }  # Updated from 0.8
rand = "0.8"
getrandom = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Web framework for API
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout"] }

# WebSocket
tokio-tungstenite = "0.24"  # Updated from 0.23
tungstenite = "0.24"  # Updated from 0.23

# Database
rusqlite = { version = "0.32", features = ["bundled"] }  # Updated from 0.29
r2d2 = "0.8"
r2d2_sqlite = "0.24"  # Updated from 0.22

# CLI
clap = { version = "4.5", features = ["derive"] }

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window"] }
wee_alloc = "0.4"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Testing
criterion = "0.5"
proptest = "1.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }

# MCP Protocol
jsonrpc = "0.18"

# Development dependencies
[workspace.dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

# Profiles matching ruv-swarm
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3      # Better for general CPU performance than "z"
lto = "thin"       # Faster compile times than "fat" LTO
codegen-units = 1
strip = true
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"    # Optimize for size in WASM
lto = "fat"        # Maximum optimization for WASM

[profile.bench]
inherits = "release"
debug = true

# Patch to use ruv-swarm alongside AMOS
[patch.crates-io]
# Uncomment if you need to use local ruv-swarm
# ruv-swarm = { path = "../ruv-FANN/ruv-swarm" }