[package]
name = "amos-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cognitive agent implementations for AMOS"

[dependencies]
amos-core = { path = "../amos-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
dashmap.workspace = true
rand.workspace = true

[dev-dependencies]
tokio-test.workspace = true
