[package]
name = "amos-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "REST API and WebSocket server for AMOS"

[dependencies]
amos-core = { path = "../amos-core" }
amos-agents = { path = "../amos-agents" }
amos-mcp = { path = "../amos-mcp" }

# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true
bcrypt.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
futures.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[[bin]]
name = "amos-api-server"
path = "src/bin/amos-api-server.rs"

[dev-dependencies]
reqwest.workspace = true
once_cell.workspace = true
axum-test = "15.0"
tokio-tungstenite.workspace = true
