[package]
name = "amos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core biological primitives for AMOS"

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
chrono.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
num_cpus = "1.16"

[dev-dependencies]
tokio-test.workspace = true
