[package]
name = "amos-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol integration for AMOS"

[dependencies]
amos-core = { path = "../amos-core" }
amos-agents = { path = "../amos-agents" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true

# MCP dependencies
jsonrpc.workspace = true
tower.workspace = true